[http issue 148] @JsonString annotation not recognized on field of type List or Map
http://codereview.appspot.com/6447088/